--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,8 @@ jobs:
           sleep 10
       - name: Run command
         run: |
-          curl 192.168.0.239
+          ping -c 4 192.168.0.239
+          ip route
       - name: Disconnect OpenVPN
         run: |
           pkill openvpn
