--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           sleep 10
       - name: Run command
         run: |
-          ping -c 4 192.168.0.1
+          sudo ip route add 192.168.0.0/24 dev tun0
           ip route
       - name: Disconnect OpenVPN
         run: |
