--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,19 +22,21 @@ jobs:
           echo ${{ secrets.OPENVPN_FILE }} | base64 --decode > openvpn.open
       - name: Connect OpenVPN
         run: |
-          openvpn --config openvpn.open --daemon
+          openvpn --config openvpn.open --daemon --log /tmp/openvpn.log --verb 4
           sleep 10
-      - name: Run command
-        run: |
-          ip addr
-          ip route
-      - name: Check for tun device
-        run: |
-          if [ -c /dev/net/tun ]; then
-            echo "TUN device is present"
-          else
-            echo "TUN device is NOT available"
-          fi
+      - name: Show OpenVPN logs
+        run: cat /tmp/openvpn.log || echo "Log not found"
+      # - name: Run command
+      #   run: |
+      #     ip addr
+      #     ip route
+      # - name: Check for tun device
+      #   run: |
+      #     if [ -c /dev/net/tun ]; then
+      #       echo "TUN device is present"
+      #     else
+      #       echo "TUN device is NOT available"
+      #     fi
       - name: Disconnect OpenVPN
         run: |
           pkill openvpn
